fixed footer gap on mobile

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -79,7 +79,7 @@
 @media (orientation: portrait) {
   #contact-section  {
     flex-direction: column;
-    height: 900px;
+    height: 800px;
   }
 
   .contact {
@@ -95,6 +95,8 @@
 
   .contact-content {
     flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
   }
 
   .contact-parent {
@@ -118,7 +120,7 @@
 @media (orientation: landscape) and (max-width: 768px) {
   #contact-section  {
     flex-direction: column;
-    height: 900px;
+    height: 800px;
   }
 
   .contact {
@@ -139,6 +141,8 @@
 
   .contact-content {
     flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
   }
 
   .contact-parent:hover {
